src/test/ui/parser/issue-21153.stderr
error: missing `fn`, `type`, or `const` for trait-item declaration
  --> $DIR/issue-21153.rs:1:29
   |
LL |   trait MyTrait<T>: Iterator {
   |  _____________________________^
LL | |     Item = T;
   | |____^ missing `fn`, `type`, or `const`

error: aborting due to previous error

