src/test/ui/parser/issue-21153.rs
trait MyTrait<T>: Iterator { //~ ERROR missing `fn`, `type`, or `const`
    Item = T;
}

fn main() {}
